--- a/index.html
+++ b/index.html
@@ -9,7 +9,21 @@
   </head>
   <body>
     <div class="app-wrap">
-      Hello
+      <header>
+        <input type=text autocomplete="off" class="search-box"
+        placeholder="Search for a city..."/>
+      </header>
+      <main>
+        <section class="location">
+          <div class="city">Northampton, GB</div>
+          <div class="date">Thursday 10 January 2020</div>
+        </section>
+        <div class="current">
+          <div class="temp">15<span>°C</span></div>
+          <div class="weather">Sunny</div>
+          <div class="hi-low">13°c / 16°c</div>
+        </div>
+      </main>
     </div>
     <script src="main.js"></script>
   </body>
