--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
       </header>
       <main>
         <section class="location">
-          <div class="city">Northampton, GB</div>
+          <div class="city">Bel Air, USA</div>
           <div class="date">Thursday 10 January 2020</div>
         </section>
         <div class="current">
-          <div class="temp">15<span>°C</span></div>
+          <div class="temp">15<span>°F</span></div>
           <div class="weather">Sunny</div>
           <div class="hi-low">13°c / 16°c</div>
         </div>
