package.json file added

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       </header>
       <main>
         <section class="location">
-          <div class="city">Bel Air, USA</div>
+          <div class="city">Bel Air, US</div>
           <div class="date">Thursday 10 January 2020</div>
         </section>
         <div class="current">
